--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </div>
   <div class="pages">
     <section class="page">
-      <div class="hero">
+      <div class="hero" id="hero">
         <canvas id="canvas3d"></canvas>
         <div class="mouseIcon"></div>
         <!-- <iframe src='https://my.spline.design/momaya3d-45bb1bebc4e95adaad42c9197e003488/' frameborder='0' width='100%' height='100%'></iframe> -->
@@ -170,7 +170,7 @@
     import { Application } from '/assets/scripts/spline.js';
     const canvas = document.getElementById('canvas3d');
     const app = new Application(canvas);
-    app.load('/assets/spline/scene2.splinecode');
+    app.load('/assets/spline/scene6.splinecode');
   </script>
 
   </script>
