--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </a>
   </header>
 
-  <nav>
+  <nav id="nav">
     <ul class="sections">
       <li>
         <a onclick="goToWork()">Work</a>
@@ -69,7 +69,7 @@
         <div class="weCreate" id="wecreate">
           <div id="js-weCreate" class="weare">
             <div class="wearetext" id="type">
-              <lottie-player src="/assets/lottie/weare" background="transparent" speed="0.75" id="typeanim">
+              <lottie-player src="/assets/lottie/weare2.json" background="transparent" speed="1" id="typeanim">
               </lottie-player>
             </div>
             <!-- <div class="vr_man">
@@ -86,7 +86,7 @@
             <p id="wefoot1text">WE CREATE</p>
           </div>
           <div class="wecreatefoot">
-            <div class="wefoot2">Animation & Live Action VFX Video PRoduction for Film and Digital Content.</div>
+            <div class="wefoot2">Animation & Live Action VFX Video Production for Film and Digital Content.</div>
           </div>
         </div>
     </section>
@@ -97,9 +97,12 @@
             <div id="leftProject" class="projectArrow left" cursor-class="arrow"></div>
             <div id="rightProject" class="projectArrow right" cursor-class="arrow"></div>
             <ul class="carousel__list">
-              <li class="carousel__item" data-pos="-2">1</li>
+              <li class="carousel__item" data-pos="-2">
+              </li>
               <li class="carousel__item" data-pos="-1">2</li>
-              <li class="carousel__item" data-pos="0">3</li>
+              <li class="carousel__item" data-pos="0">
+                <iframe src="https://player.vimeo.com/video/754478851?h=69a1ef6bb3&autoplay=1&loop=1" style="position:absolute;top:0;left:0;width:100%;height:100%;border-radius: 10px" frameborder="0" allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
+              </li>
               <li class="carousel__item" data-pos="1">4</li>
               <li class="carousel__item" data-pos="2">5</li>
             </ul>
@@ -127,18 +130,20 @@
               </lottie-player>
             </a>
           </div>
-          <h5>
-            prashant@momaya.com
-          </h5>
+          <h4>
+            <a href="mailto:prashant@momaya.com" style="text-decoration: none;">
+              prashant@momaya.com
+            </a>
+          </h4>
         </div>
         <div class="localisation nullIcon"></div>
         <div class="taglineParent">
           <div class="taglineBlock">
-            <div class="row">
-              <span>LET'S</span>
+            <div class="row" id="lets">
+              <span>Let's</span>
             </div>
-            <div class="row">
-              <span>CREATE</span>
+            <div class="row" id="create">
+              <span>Create</span>
             </div>
           </div>
         </div>
@@ -148,11 +153,11 @@
               <div class="mousePointer"></div>
           </a>
         </div>
-        <div class="web_man">
+        <!-- <div class="web_man">
           <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_toofqbxc.json" background="transparent"
             speed="1" loop autoplay>
           </lottie-player>
-        </div>
+        </div> -->
       </div>
     </section>
   </div>
@@ -166,6 +171,7 @@
   <script src="/assets/scripts/projects.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <script src="https://player.vimeo.com/api/player.js"></script>
   <script type="module">
     import { Application } from '/assets/scripts/spline.js';
     const canvas = document.getElementById('canvas3d');
