--- a/index.html
+++ b/index.html
@@ -40,19 +40,16 @@
   </nav>
 
   <div class="socialLinks">
-    <a href="" title="MoMaya Instagram" id="social1"  target="_blank" rel="noopener noreferrer">
-      <lottie-player src="assets/lottie/instagram.json" background="transparent"
-        speed="2" hover>
+    <a href="" title="MoMaya Instagram" id="social1" target="_blank" rel="noopener noreferrer">
+      <lottie-player src="assets/lottie/instagram.json" background="transparent" speed="2" hover>
       </lottie-player>
     </a>
-    <a href="" title="MoMaya Behance" id="social2"  target="_blank" rel="noopener noreferrer">
-      <lottie-player src="assets/lottie/behance.json" background="transparent"
-      speed="2" hover>
-    </lottie-player>
-  </a>
-  <a href="" title="MoMaya LinkedIn" id="social3" target="_blank" rel="noopener noreferrer">
-      <lottie-player src="assets/lottie/vimeo.json" background="transparent"
-        speed="2" hover>
+    <a href="" title="MoMaya Behance" id="social2" target="_blank" rel="noopener noreferrer">
+      <lottie-player src="assets/lottie/behance.json" background="transparent" speed="2" hover>
+      </lottie-player>
+    </a>
+    <a href="" title="MoMaya LinkedIn" id="social3" target="_blank" rel="noopener noreferrer">
+      <lottie-player src="assets/lottie/vimeo.json" background="transparent" speed="2" hover>
       </lottie-player>
     </a>
   </div>
@@ -60,7 +57,7 @@
     <section class="page">
       <div class="hero" id="hero">
         <canvas id="canvas3d"></canvas>
-        <div class="mouseIcon"></div>
+        <div class="mouseIcon" id="scrollicon"></div>
         <!-- <iframe src='https://my.spline.design/momaya3d-45bb1bebc4e95adaad42c9197e003488/' frameborder='0' width='100%' height='100%'></iframe> -->
       </div>
     </section>
@@ -101,7 +98,9 @@
               </li>
               <li class="carousel__item" data-pos="-1">2</li>
               <li class="carousel__item" data-pos="0">
-                <iframe src="https://player.vimeo.com/video/754478851?h=69a1ef6bb3&autoplay=1&loop=1" style="position:absolute;top:0;left:0;width:100%;height:100%;border-radius: 10px" frameborder="0" allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/754478851?h=69a1ef6bb3&autoplay=1&loop=1"
+                  style="position:absolute;top:0;left:0;width:100%;height:100%;border-radius: 10px" frameborder="0"
+                  allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
               </li>
               <li class="carousel__item" data-pos="1">4</li>
               <li class="carousel__item" data-pos="2">5</li>
@@ -111,22 +110,19 @@
       </div>
     </section>
     <section class="page">
-      <div class="fullpagefooter blur" id="main_footer">
+      <div class="fullpagefooter moreblur" id="main_footer">
         <div class="footer">
           <div class="socialLinksFooter">
             <a href="" title="MoMaya Instagram" id="footsocial1" target="_blank" rel="noopener noreferrer">
-              <lottie-player src="assets/lottie/instagramblack.json" background="transparent"
-                speed="2" hover>
+              <lottie-player src="assets/lottie/instagramblack.json" background="transparent" speed="2" hover>
               </lottie-player>
             </a>
             <a href="" title="MoMaya Behance" id="footsocial2" target="_blank" rel="noopener noreferrer">
-              <lottie-player src="assets/lottie/behanceblack.json" background="transparent"
-              speed="2" hover>
-            </lottie-player>
-          </a>
-          <a href="" title="MoMaya LinkedIn" id="footsocial3" target="_blank" rel="noopener noreferrer">
-              <lottie-player src="assets/lottie/vimeoblack.json" background="transparent"
-                speed="2" hover>
+              <lottie-player src="assets/lottie/behanceblack.json" background="transparent" speed="2" hover>
+              </lottie-player>
+            </a>
+            <a href="" title="MoMaya LinkedIn" id="footsocial3" target="_blank" rel="noopener noreferrer">
+              <lottie-player src="assets/lottie/vimeoblack.json" background="transparent" speed="2" hover>
               </lottie-player>
             </a>
           </div>
@@ -149,8 +145,8 @@
         </div>
         <div class="contactZone">
           <a href="" class="startButton">
-              Start
-              <div class="mousePointer"></div>
+            Start
+            <div class="mousePointer"></div>
           </a>
         </div>
         <!-- <div class="web_man">
@@ -178,7 +174,6 @@
     const app = new Application(canvas);
     app.load('/assets/spline/scene6.splinecode');
   </script>
-
   </script>
 </body>
 
