--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <a onclick="scrollToTop()" href="#" title="MoMaya - Collective" class="momaya" cursor-class="arrow">
-      <img src="/assets/images/logo/momaya_sticker.svg" class="logo">
+      <img src="/assets/images/logo/momaya_sticker.svg" class="logo" id="logo">
     </a>
     <a href="" class="menu" id="js-menuButton">
       <div class="row plain"></div>
@@ -54,14 +54,14 @@
     </a>
   </div>
   <div class="pages">
-    <section class="page">
+    <section class="page" id="page1">
       <div class="hero" id="hero">
         <canvas id="canvas3d"></canvas>
         <div class="mouseIcon" id="scrollicon"></div>
         <!-- <iframe src='https://my.spline.design/momaya3d-45bb1bebc4e95adaad42c9197e003488/' frameborder='0' width='100%' height='100%'></iframe> -->
       </div>
     </section>
-    <section class="page">
+    <section class="page" id="page2">
       <div class="welcomeToGax blur">
         <div class="weCreate" id="wecreate">
           <div id="js-weCreate" class="weare">
@@ -87,7 +87,7 @@
           </div>
         </div>
     </section>
-    <section class="page">
+    <section class="page" id="page3">
       <div class="projects" id="work">
         <div id="js-projectsBox" class="projectsBox">
           <div class="carousel">
@@ -109,7 +109,7 @@
         </div>
       </div>
     </section>
-    <section class="page">
+    <section class="page" id="page4">
       <div class="fullpagefooter moreblur" id="main_footer">
         <div class="footer">
           <div class="socialLinksFooter">
@@ -174,6 +174,7 @@
     const app = new Application(canvas);
     app.load('/assets/spline/scene6.splinecode');
   </script>
+  <script>
   </script>
 </body>
 
