--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
         <div class="weCreate" id="wecreate">
           <div id="js-weCreate" class="weare">
             <div class="wearetext" id="type">
-              <lottie-player src="/assets/lottie/weare2.json" background="transparent" speed="1" id="typeanim">
+              <lottie-player src="/assets/lottie/we_are_MO-MAYA_WEB.json" background="transparent" speed="1" id="typeanim">
+              </lottie-player>
+            </div>
+            <div class="wearetextphone" id="type2">
+              <lottie-player src="/assets/lottie/we_are_MO-MAYA_PHONE.json" background="transparent" speed="1" id="typeanim2">
               </lottie-player>
             </div>
             <!-- <div class="vr_man">
