--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 </head>
 
 <body>
+  <div class="loading" id="loading">
+    <div class="logoloading">
+      <lottie-player src="/assets/lottie/logo_loop.json" background="transparent" speed="2" class="logo" autoplay loop>
+      </lottie-player>
+    </div>
+  </div>
   <header>
-    <a onclick="scrollToTop()" href="#" title="MoMaya - Collective" class="momaya" cursor-class="arrow">
-      <img src="/assets/images/logo/momaya_sticker.svg" class="logo" id="logo">
-    </a>
+    <div class="momaya">
+      <lottie-player src="/assets/lottie/momoaya_nav_logo.json" background="transparent" speed="2" class="logo" id="logo" hover>
+      </lottie-player>
+    </div>
     <a href="" class="menu" id="js-menuButton">
       <div class="row plain"></div>
       <div class="row group">
@@ -55,7 +62,7 @@
   </div>
   <div class="pages">
     <section class="page" id="page1">
-      <div class="hero" id="hero">
+      <div class="hero" id="hero" style="visibility: hidden">
         <canvas id="canvas3d"></canvas>
         <div class="mouseIcon" id="scrollicon"></div>
         <!-- <iframe src='https://my.spline.design/momaya3d-45bb1bebc4e95adaad42c9197e003488/' frameborder='0' width='100%' height='100%'></iframe> -->
@@ -66,11 +73,11 @@
         <div class="weCreate" id="wecreate">
           <div id="js-weCreate" class="weare">
             <div class="wearetext" id="type">
-              <lottie-player src="/assets/lottie/we_are_MO-MAYA_WEB.json" background="transparent" speed="1" id="typeanim">
+              <lottie-player src="/assets/lottie/weare_web.json" background="transparent" speed="1" id="typeanim">
               </lottie-player>
             </div>
             <div class="wearetextphone" id="type2">
-              <lottie-player src="/assets/lottie/we_are_MO-MAYA_PHONE.json" background="transparent" speed="1" id="typeanim2">
+              <lottie-player src="/assets/lottie/weare_mobile.json" background="transparent" speed="1" id="typeanim2">
               </lottie-player>
             </div>
             <!-- <div class="vr_man">
@@ -102,7 +109,7 @@
               </li>
               <li class="carousel__item" data-pos="-1">2</li>
               <li class="carousel__item" data-pos="0">
-                <iframe src="https://player.vimeo.com/video/754478851?h=69a1ef6bb3&autoplay=1&loop=1"
+                <iframe src="https://player.vimeo.com/video/780708660?h=0e527647df&autoplay=1&loop=1"
                   style="position:absolute;top:0;left:0;width:100%;height:100%;border-radius: 10px" frameborder="0"
                   allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
               </li>
@@ -179,6 +186,21 @@
     app.load('/assets/spline/scene6.splinecode');
   </script>
   <script>
+    LottieInteractivity.create({
+      player: '#logo',
+      mode: "hover",
+      actions: [
+        { type: "seek"}
+      ]
+    });
+  </script>
+  <script>
+    setTimeout(hideLoader, 4000)
+    function hideLoader(){
+      // document.getElementById('snow').style.visibility = "hidden"; 
+      document.getElementById('loading').style.visibility = "hidden";
+      document.getElementById('hero').style.visibility = "visible";
+    }
   </script>
 </body>
 
