--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <lottie-player src="/assets/lottie/momoaya_nav_logo.json" background="transparent" speed="2" class="logo" id="logo" hover>
       </lottie-player>
     </div>
-    <a href="" class="menu" id="js-menuButton">
+    <!-- <a href="" class="menu" id="js-menuButton">
       <div class="row plain"></div>
       <div class="row group">
         <div class="part"></div>
         <div class="part"></div>
       </div>
       <div class="row plain"></div>
-    </a>
+    </a> -->
   </header>
 
   <nav id="nav">
@@ -62,13 +62,12 @@
   </div>
   <div class="pages">
     <section class="page" id="page1">
-      <div class="hero" id="hero" style="visibility: hidden">
+      <div class="hero" id="hero">
         <canvas id="canvas3d"></canvas>
         <div class="mouseIcon" id="scrollicon"></div>
-        <!-- <iframe src='https://my.spline.design/momaya3d-45bb1bebc4e95adaad42c9197e003488/' frameborder='0' width='100%' height='100%'></iframe> -->
       </div>
     </section>
-    <section class="page" id="page2">
+    <section class="page" id="page2" style="visibility: hidden;">
       <div class="welcomeToGax blur">
         <div class="weCreate" id="wecreate">
           <div id="js-weCreate" class="weare">
@@ -107,13 +106,21 @@
             <ul class="carousel__list">
               <li class="carousel__item" data-pos="-2">
               </li>
-              <li class="carousel__item" data-pos="-1">2</li>
-              <li class="carousel__item" data-pos="0">
-                <iframe src="https://player.vimeo.com/video/780708660?h=0e527647df&autoplay=1&loop=1"
+              <li class="carousel__item" data-pos="-1">
+                <iframe src="https://player.vimeo.com/video/780708660?h=3c28b50702&byline=0"
                   style="position:absolute;top:0;left:0;width:100%;height:100%;border-radius: 10px" frameborder="0"
                   allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
               </li>
-              <li class="carousel__item" data-pos="1">4</li>
+              <li class="carousel__item" data-pos="0">
+                <iframe src="https://player.vimeo.com/video/801865302?h=0e527647df&byline=0"
+                  style="position:absolute;top:0;left:0;width:100%;height:100%;border-radius: 10px" frameborder="0"
+                  allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
+              </li>
+              <li class="carousel__item" data-pos="1">
+                <iframe src="https://player.vimeo.com/video/780755952?h=3c28b50702&byline=0"
+                  style="position:absolute;top:0;left:0;width:100%;height:100%;border-radius: 10px" frameborder="0"
+                  allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
+              </li>
               <li class="carousel__item" data-pos="2">5</li>
             </ul>
           </div>
@@ -155,10 +162,10 @@
           </div>
         </div>
         <div class="contactZone">
-          <a href="" class="startButton">
+          <!-- <a href="" class="startButton">
             Start
             <div class="mousePointer"></div>
-          </a>
+          </a> -->
         </div>
         <!-- <div class="web_man">
           <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_toofqbxc.json" background="transparent"
@@ -173,33 +180,30 @@
   </ul>
 
 
-  <script src="/assets/scripts/main.js"></script>
+  <!-- <script src="/assets/scripts/main.js"></script> -->
   <script src="/assets/scripts/navigator.js"></script>
   <script src="/assets/scripts/projects.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script src="https://player.vimeo.com/api/player.js"></script>
   <script type="module">
-    import { Application } from '/assets/scripts/spline.js';
+    import { Application } from '/assets/scripts/runtime.js';
     const canvas = document.getElementById('canvas3d');
     const app = new Application(canvas);
-    app.load('/assets/spline/scene6.splinecode');
+    app.load('/assets/spline/new2.splinecode');
+    // app.load('https://prod.spline.design/o9XsvDi-l1EMcAu9/scene.splinecode');
   </script>
   <script>
-    LottieInteractivity.create({
-      player: '#logo',
-      mode: "hover",
-      actions: [
-        { type: "seek"}
-      ]
-    });
-  </script>
-  <script>
+    document.getElementById('hero').style.visibility = "hidden";
     setTimeout(hideLoader, 4000)
     function hideLoader(){
-      // document.getElementById('snow').style.visibility = "hidden"; 
-      document.getElementById('loading').style.visibility = "hidden";
+      // document.getElementById('loading').style.position = "relative";
+      document.getElementById('loading').style.width = "1px";
       document.getElementById('hero').style.visibility = "visible";
+    }
+
+    function goToWork(){
+      
     }
   </script>
 </body>
